Added Wizard GUI for two model options ( Throttle Cut and Throttle Timer). The wizard option data is not yet added to the mixer. That is the next step.

--- a/companion/src/companion.qrc
+++ b/companion/src/companion.qrc
@@ -71,6 +71,7 @@
     <file>images/wizard/models.png</file>
     <file>images/wizard/multirotor.png</file>
     <file>images/wizard/rudder.png</file>
+    <file>images/wizard/options.png</file>
     <file>images/wizard/simpletail.png</file>
     <file>images/wizard/tail.png</file>
     <file>images/wizard/tails.png</file>
